# conduit

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md
.cursor/rules/: deployment.mdc
.github/workflows/: ci.yml  deploy.yml
crates/conduit-buyer/: Cargo.toml
crates/conduit-buyer/src/: main.rs
crates/conduit-core/: Cargo.toml
crates/conduit-core/src/: chunk.rs  encrypt.rs  invoice.rs  lib.rs  merkle.rs  pre.rs  receipt.rs  verify.rs
crates/conduit-core/tests/: integration_lightning.rs  pre_e2e.rs  pre_vectors.rs
crates/conduit-core/tests/vectors/afgh06/: README.md
crates/conduit-core/tests/vectors/bls12_381/: README.md
crates/conduit-creator/: Cargo.toml
crates/conduit-creator/src/: main.rs
crates/conduit-p2p/: Cargo.toml
crates/conduit-p2p/src/: client.rs  dht.rs  handler.rs  lib.rs  node.rs  wire.rs
crates/conduit-p2p/tests/: integration.rs  two_node.rs
crates/conduit-setup/: Cargo.toml
crates/conduit-setup/src/: catalog.rs  cli.rs  console.rs  events.rs  main.rs  sell.rs  state.rs
crates/conduit-setup/src/buy/: ad.rs  chunked.rs  direct.rs  mod.rs  multisource.rs  pre.rs  simple.rs
crates/conduit-setup/src/handlers/: advertiser.rs  campaigns.rs  chunks.rs  content.rs  mod.rs  p2p.rs  pre.rs  receipts.rs  sse.rs  tee.rs  wallet.rs
deploy/: conduit-buyer.service  conduit-creator.service  conduit-dsgndude.service  conduit-node-aws.service  conduit-node.service  conduit-peer7.service  conduit-peer8.service  conduit-seeder.service  conduit-seeder2.service  setup-systemd.sh
deploy/envs/: advertiser.env  buyer.env  buyer2.env  creator.env  dsgndude.env  owk50ga.env  peer7.env  peer8.env  seeder.env  seeder2.env
scripts/: backup-nodes.sh  bootstrap.sh  diagnose.sh  provision.sh  test-pre-signet.sh  watch-and-backup.sh
