[package]
name = "conduit-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Core library for Conduit: atomic content-for-payment exchange"

[dependencies]
# Encryption
aes = "0.8"
ctr = "0.9"
cipher = "0.4"

# Hashing
sha2 = "0.10"

# Lightning
ldk-node = "0.7"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Proxy Re-Encryption (BLS12-381 pairing curve, AFGH06 scheme)
bls12_381 = { version = "0.8", features = ["groups", "pairings"] }
ff = "0.13"
group = "0.13"

# Utilities
rand = "0.8"
hex = "0.4"
thiserror = "2"

[dev-dependencies]
hex = "0.4"
ldk-node = "0.7"
