[package]
name = "conduit-creator"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Conduit creator CLI: encrypt content, create Lightning invoice, serve file"

[dependencies]
conduit-core = { path = "../conduit-core" }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
